possibly fixing map not showing

--- a/Home-Page/src/HomepageComponents/GamePage/SpecialMode2/SpecialMode2.css
+++ b/Home-Page/src/HomepageComponents/GamePage/SpecialMode2/SpecialMode2.css
@@ -23,7 +23,7 @@ body {
 display: none;
 }
 
-#map {
+#specialMap {
     position: absolute;
     top: 25%;
     left: 700px;
